<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    tools:context=".AboutActivity"
    android:orientation="vertical">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/techcos"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="We TechCos Inc,"
        android:textColor="#000000"
        android:textSize="18dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="\n\t\t\t\t\t\t\t\tWe are StartUp Founded by Students Of Dept(CSE) 2020-24 Of Christ College Of Engg. &amp; Tech.\n\n\t\t\t\t\t\t\t\t We are Developing Softwares for Day-To-Day life Usages."
        android:textSize="13dp"
        />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/mail"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_margin="2dp"
                android:src="@drawable/ic_mail_outline_black_24dp"
                />
            <TextView
                android:id="@+id/mailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/mail"
                android:textSize="13dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/yt"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:src="@drawable/yt"
                android:layout_margin="2dp"
                />
            <TextView
                android:id="@+id/youtubeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/youtubelnk"
                android:textSize="13dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/twitter"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_margin="2dp"
                android:src="@drawable/twitter"
                />
            <TextView
                android:id="@+id/twitterText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/twitter"
                android:textSize="13dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/insta"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:src="@drawable/insta"
                />
            <TextView
                android:id="@+id/instaText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/insta"
                android:textSize="13dp"
                />
        </LinearLayout>



    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>