<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".VideosFragment"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/totalVideos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_videos"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/VideoRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarThumbVertical="@drawable/scroll_bar_icon"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@id/totalVideos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingBottom="10dp"/>
<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/nowPlayingLayout"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_margin="5dp"
    android:layout_marginBottom="0dp"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:orientation="vertical"
    app:layout_constraintStart_toStartOf="parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:outlineAmbientShadowColor="@color/light_dark"
        android:layout_gravity="center_vertical"
        android:visibility="gone"
        android:backgroundTint="?attr/themeColor"
        >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/lastPlayImg"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:contentDescription="@string/image"
            android:src="@mipmap/ic_video_player"
             />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:layout_marginStart="71dp"
            android:layout_marginEnd="50dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:text="Last Played Video :"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/lastPlayvideoName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:maxLines="1"
            android:paddingHorizontal="5dp"
            android:paddingVertical="5dp"
            android:text="@string/video_name"
            />

        <TextView
            android:id="@+id/duration"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center"
            android:text="@string/duration"
            android:textColor="@color/white"/>

    </com.google.android.material.card.MaterialCardView>
</androidx.appcompat.widget.LinearLayoutCompat>



        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/nowPlayingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95"
            android:backgroundTint="@color/white"
            app:icon="@drawable/play_icon"
            app:strokeWidth="2dp"
            app:strokeColor="?attr/themeColor"
            app:iconTint="?attr/themeColor"
            app:iconSize="35dp"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>